--- a/styles/architects.css
+++ b/styles/architects.css
@@ -35,6 +35,15 @@
     border: none;
 }
 
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main >section{
+    margin-top: 130px;
+}
+
 /* header styles */
 
 /* navbar related styles */
@@ -73,6 +82,31 @@
 }
 .banner-image{
     width: 100%;
+}
+
+/* team and feature related styles */
+.teams{
+    align-items: center;
+}
+
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+.feature-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+#quick-list{
+    font-weight: 500;
 }
 
 /* responsive media query */
