--- a/styles/architects.css
+++ b/styles/architects.css
@@ -13,6 +13,10 @@
     display: flex;
 }
 
+.text-primary{
+    color: #ff900e;
+}
+
 .text-gray{
     color: #424242;
 }
@@ -111,8 +115,28 @@ main >section{
 
 /* responsive media query */
 @media screen and (max-width:576px) {
-    .navbar,.nav-links{
+    .navbar,
+    .nav-links,
+    .teams{
         flex-direction: column;
+    }
+
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+    
+}
+
+/* medium size device */
+@media screen and (min-width:576px) and (max-width:992){
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin: 50px auto;
     }
     
 }
