added to the fact description

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -47,6 +47,10 @@ main{
 main >section{
     margin-top: 130px;
 }
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
 
 /* header styles */
 
@@ -104,15 +108,39 @@ main >section{
     max-width: 530px;
 }
 
-.feature-title{
-    font-size: 2.8rem;
-    font-weight: 700;
-}
-
 #quick-list{
     font-weight: 500;
 }
 
+
+/* some facts related styles */
+.facts-container{
+ justify-content: center;
+   display: grid;
+   grid-template-columns: repeat(4,1fr);
+}
+.fact-card{
+    border: 1px solid #ff900e;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
 /* responsive media query */
 @media screen and (max-width:576px) {
     .navbar,
